增加子项批量查询功能